# scp_containment_unit

./: .gitignore  Cargo.toml  Justfile  README.md  pyproject.toml  scp_config.json.example  scp_containment_unit.service  scpcu_config.example.json
.github/workflows/: ci.yml
scp_containment_unit/: __init__.py
src/: common.rs  main.rs  store.rs
src/commands/: breach.rs  mod.rs
src/util/: discord.rs
tests/: test_scp_containment_unit.py
