[package]
name = "scp_containment_unit"
version = "0.1.0"
authors = ["Celeo <mattboulanger@fastmail.com>"]
edition = "2018"
description = "Dsicord bot"
readme = "README.md"
homepage = "https://github.com/celeo/scp_containment_unit"
repository = "https://github.com/celeo/scp_containment_unit"
license = "MIT OR Apache-2.0"
exclude = [
  ".github",
  ".env",
  "scp_containment_unit.service"
]
keywords = []
categories = []

[dependencies]
anyhow = "1.0.32"
kankyo = "0.3.0"
lightspeed_scheduler = "0.16.1"
log = "0.4.11"
pretty_env_logger = "0.4.0"
serenity = "0.8.7"
